--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-cli": "^10.1.0",
     "postcss-loader": "^7.1.0",
     "prettier": "^2.8.7",
+    "react-router-dom": "^6.9.0",
     "tailwindcss": "^3.2.7",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
